Complete Game and Library API
